[project]
name = "CheetahPy"
version = "0.3.0"
description = "Python API for accessing Golden Cheetah"
readme = "README.md"
authors = [
  { name="Ryan Duecker", email="ryan.duecker@yahoo.com" },
]
license = {file = 'LICENSE'}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]