[project]
name = "CheetahPy"
description = "Python API for accessing Golden Cheetah"
readme = "README.md"
authors = [
  { name="Ryan Duecker", email="ryan.duecker@yahoo.com" },
]
dependencies = [
  "pandas",
  "requests"
]
license = {file = 'LICENSE'}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest"]
linting = ["flake8", "pylint"]

[tool.setuptools.packages.find]
where = ["cheetahpy"]

[tool.setuptools.dynamic]
version = {file = "cheetahpy/VERSION"}
