[project]
name = "cheetahpy"
description = "Python API for accessing Golden Cheetah"
readme = "README.md"
authors = [
  { name="Ryan Duecker", email="ryan.duecker@yahoo.com" },
]
dependencies = [
  "pandas",
  "requests"
]
license = {file = 'LICENSE'}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest"]
linting = ["flake8", "pylint"]
dev = ["pytest", "flake8", "pylint"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "src/cheetahpy/VERSION"}
